[gd_scene load_steps=21 format=2]

[ext_resource path="res://15_tank_set.png" type="Texture" id=1]
[ext_resource path="res://Tower.gd" type="Script" id=2]
[ext_resource path="res://blue-circle (1).png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 256.803

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 68, 68 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 68, 0, 68, 68 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 136, 0, 68, 68 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 204, 0, 68, 68 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 272, 0, 68, 68 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 68, 68, 68 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 68, 68, 68, 68 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 136, 68, 68, 68 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 204, 68, 68, 68 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 272, 68, 68, 68 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 136, 68, 68 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 68, 136, 68, 68 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 136, 136, 68, 68 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 204, 136, 68, 68 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 272, 136, 68, 68 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Tower" type="Area2D" groups=[
"Tower",
]]
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 2 )
AttackRange = 300

[node name="RangeIndicator" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AttackTimer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -110, 0 )
rotation = -1.5708
scale = Vector2( 8, 8 )
frames = SubResource( 17 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
